--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-map-gl": "^5.2.10",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
